# renku

./: .devenv.flake.nix  .dockerignore  .editorconfig  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .scala-steward.conf  .style.yapf  .travis.yml  CHANGELOG-template.rst  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  DCACHE.md  DEVELOPING.md  Dockerfile  LICENSE  Makefile  NOTICE  Pipfile  README.md  README.rst  RELEASE-NOTES.md  RELEASE.md  _static  build.js  build.sbt  chartpress-gitlab.yaml  chartpress.yaml  default.nix  devenv.nix  docker-build  docker-compose.local.yml  docker-compose.yml  event.json  github_deploy_key.enc  graph.yaml  (+19 more)
.bsp/: sbt.json
.devcontainer/: Dockerfile  Dockerfile.cypress  devcontainer.json
.devenv/: devenv.json
.github/: CODEOWNERS  dependabot.yml  pr-labeler.yml  release-drafter.yml
.travis/: git-commit-build.sh
acceptance-tests/: .envrc  .gitignore  .scalafmt.conf  Dockerfile  README.md  build.sbt  docker-compose.yml  docker-run-tests.sh  flake.nix  local-run-test.sh  requirements.txt  tests-defaults.conf.template
apispec/: Dockerfile  requirements.txt  swagger.py
app/: Filters.scala
argo-test/: argo-cd-values.yaml  install.sh
certificates/: Dockerfile  README.md  chartpress.yaml
charts/: README.rst  all-possible-values.yaml  chartpress.yaml  deploy-tmp-notebooks.py  minikube-values.yaml  ralf-dev.values.yaml  values.yaml.changelog  values.yaml.changelog.md
conf/: application.conf  application.docker.conf  application.doker.conf  janusgraph-berkeleyje-es.properties  janusgraph-cassandra.properties  routes
cypress-tests/: .eslintrc.json  .gitignore  README.md  config.ts  cypress.config.ts  cypress.env.template.json  package-lock.json  package.json  tsconfig.json
definitions/: Edge.yaml  Error.yaml  Graph.yaml  Type.yaml  Vertex.yaml  index.yaml
deploy-service/: .gitignore  build.sbt
docs/: Makefile  README.md  conf.py  docusaurus.config.ts  gensidebar.py  get_in_touch.rst  getting_started.rst  index.rst  make.bat  package-lock.json  package.json  platform.rst  release-notes.rst  release_notes.rst  (+8 more)
docs-legacy/: README.md  conf.py  requirements.txt  spelling_wordlist.txt  tutorials.rst
global-images/basic/: environment.yml  pyproject.toml
global-images/datascience/: pyproject.toml  requirements.txt
(+2503 files in other folders)
